# CEPCSW

./: .gitignore  README.md  build.sh  run.sh  setup.sh  test.txt
Detector/DetCRD/: CMakeLists.txt
Digitisers/: CMakeLists.txt
Digitisers/CRDEcalDigi/: CMakeLists.txt
Digitisers/EcalBlockDigi/: CMakeLists.txt
Digitisers/EcalMatrixDigi/: CMakeLists.txt
Digitisers/EcalModuleDigi/: CMakeLists.txt
Digitisers/FanEcalDigi/: CMakeLists.txt  README.md
Digitisers/FanEcalDigi/script/: read.py
Digitisers/FanEcalDigi/src/: CaloBar.h  CaloCluster.h  FanEcalDigiAlg.cpp  FanEcalDigiAlg.h
Digitisers/FanEcalDigi/src/mycode/: CaloBar.h  CaloCluster.h  CaloStep.h  FanEcalDigiAlg.cpp  FanEcalDigiAlg.h
Examples/: CMakeLists.txt
Examples/options/: sim-rec-trackerecal.py
Generator/src/: GtBeamBackgroundTool.cpp
Reconstruction/: CMakeLists.txt
Reconstruction/ArborYouth/: CMakeLists.txt
Reconstruction/CRDEcalRec/: CMakeLists.txt
Reconstruction/CRDEcalRec/include/: EcalClusterReconstruction.h  PandoraPlusDataCol.h  PandoraPlusPFAlg.h
Reconstruction/CRDEcalRec/include/Algorithm/: ArborClusteringAlg.h  ArborTreeMergingAlg.h  AxisMergingAlg.h  BasicClusterIDAlg.h  CandidateMakingAlg.h  ClusterMergingAlg.h  ConeClustering2DAlg.h  ConeClusteringAlg.h  EnergySplittingAlg.h  EnergyTimeMatchingAlg.h  ExampleAlg.h  GlobalClusteringAlg.h  HcalClusteringAlg.h  HoughClusteringAlg.h  LocalMaxFindingAlg.h  PFOCreatingAlg.h  ShadowMakingAlg.h  TrackExtrapolatingAlg.h  TrackMatchingAlg.h  TruthClusterMergingAlg.h  TruthClusteringAlg.h  TruthEnergySplittingAlg.h  TruthHcalClusteringAlg.h  TruthMatchingAlg.h  TruthPatternRecAlg.h  TruthTrackMatchingAlg.h
Reconstruction/CRDEcalRec/include/Objects/: .Track.h.swp  .TrackStatus.h.swp  ArborNode.h  ArborTree.h  CRDArborNode.h  CRDArborTree.h  CRDCaloBar.h  CRDCaloBarCluster.h  CRDCaloBarShower.h  CRDCaloBlock.h  CRDCaloHit2DShower.h  CRDCaloHit3DCluster.h  CRDCaloHitLongiCluster.h  CRDCaloHitTransShower.h  CRDCaloLayer.h  CRDCaloTower.h  CRDHoughObject.h  CRDHoughSpace.h  CRDShadowCluster.h  Calo1DCluster.h  Calo2DCluster.h  Calo3DCluster.h  CaloBar.h  CaloBarCluster.h  CaloBarShower.h  CaloBlock.h  CaloCluster.h  CaloHalfCluster.h  CaloHit.h  CaloTower.h  CaloUnit.h  HoughObject.h  HoughSpace.h  LongiCluster.h  PFObject.h  TMVA_CID_BDTG.weights.xml  Track.h  TrackFitInEcal.h  TrackState.h  TransShower.h
Reconstruction/CRDEcalRec/include/Tools/: Algorithm.h  AlgorithmManager.h  CaloHitsCreator.h  EcalHitsCreator.h  HcalHitsCreator.h  MCParticleCreator.h  OutputCreator.h  PFOCreator.h  TrackCreator.h  TrackFitInEcal.h  VertexCreator.h
Reconstruction/CRDEcalRec/src/: CRDEcalDigiAlg.cpp  CRDEcalDigiAlg.h  CRDEcalPreRecAlg.cpp  DigiHitsWithPos.h  EcalClusterReconstruction.cpp  PandoraPlusDataCol.cpp  PandoraPlusPFAlg.cpp
Reconstruction/CRDEcalRec/src/Algorithm/: ArborClusteringAlg.cpp  ArborTreeMergingAlg.cpp  AxisMergingAlg.cpp  BasicClusterIDAlg.cpp  CandidateMakingAlg.cpp  ClusterMergingAlg.cpp  ConeClustering2DAlg.cpp  ConeClusteringAlg.cpp  EnergySplittingAlg.cpp  EnergyTimeMatchingAlg.cpp  ExampleAlg.cpp  GlobalClusteringAlg.cpp  HcalClusteringAlg.cpp  HoughClusteringAlg.cpp  LocalMaxFindingAlg.cpp  PFOCreatingAlg.cpp  ShadowMakingAlg.cpp  TrackExtrapolatingAlg.cpp  TrackMatchingAlg.cpp  TruthClusterMergingAlg.cpp  TruthClusteringAlg.cpp  TruthEnergySplittingAlg.cpp  TruthHcalClusteringAlg.cpp  TruthMatchingAlg.cpp  TruthPatternRecAlg.cpp  TruthTrackMatchingAlg.cpp  new_EnergyTimeMatchingAlg.cpp
Reconstruction/CRDEcalRec/src/Objects/: ArborNode.cc  ArborTree.cc  CRDArborNode.cc  CRDArborTree.cc  CRDCaloBar.cc  CRDCaloBarCluster.cc  CRDCaloBarShower.cc  CRDCaloBlock.cc  CRDCaloHit2DShower.cc  CRDCaloHit3DCluster.cc  CRDCaloHitLongiCluster.cc  CRDCaloHitTransShower.cc  CRDHoughSpace.cc  Calo1DCluster.cc  Calo2DCluster.cc  Calo3DCluster.cc  CaloBar.cc  CaloBarCluster.cc  CaloBarShower.cc  CaloBlock.cc  CaloCluster.cc  CaloHalfCluster.cc  CaloHit.cc  CaloTower.cc  CaloUnit.cc  HoughObject.cc  HoughSpace.cc  LongiCluster.cc  PFObject.cc  Track.cc  TrackFitInEcal.cpp  TransShower.cc
Reconstruction/CRDEcalRec/src/Tools/: CaloHitsCreator.cpp  EcalHitsCreator.cpp  MCParticleCreator.cpp  OutputCreator.cpp  PFOCreator.cpp  TrackCreator.cpp  TrackFitInEcal.cpp
Service/: CMakeLists.txt
Service/CRDEcalEDMSvc/: CMakeLists.txt
Service/CRDEcalEDMSvc/include/CRDEcalEDMSvc/: .CRDArborNode.h.swp  .CRDArborTree.h.swp  CRDArborNode.h  CRDArborTree.h  CRDArborTreeData.h  CRDCaloBar.h  CRDCaloBarCluster.h  CRDCaloBarShower.h  CRDCaloBlock.h  CRDCaloHit2DShower.h  CRDCaloHit3DShower.h  CRDCaloLayer.h  CRDCaloStep.h  CRDExpEMShower.h  CRDShowerCandidate.h  ICRDEcalEDMSvc.h  PFObject.h  Track.h  TrackFitInEcal.h
Service/CRDEcalEDMSvc/src/: CRDArborNode.cc  CRDArborTree.cc  CRDCaloBar.cc  CRDCaloBarCluster.cc  CRDCaloBarShower.cc  CRDCaloBlock.cc  CRDCaloHit2DShower.cc  CRDCaloHit3DShower.cc  CRDEcalEDMSvc.cpp  CRDEcalEDMSvc.h  Track.cc  TrackFitInEcal.cpp
Service/CRDEcalSvc/: CMakeLists.txt
Service/CRDEcalSvc/include/CRDEcalSvc/: ICRDEcalSvc.h
Service/CRDEcalSvc/src/: CRDEcalSvc.cpp  CRDEcalSvc.h
run/: CRDGlobalTest_1gamPFA.root  Drawplot.cpp  OutTree_testsvc.root  Root2h5.py  RunRoot2h5.sh  checkh5.py  detsim_1gam.py  detsim_CEPCv4.py  detsim_Ecal.py  detsim_EcalOnly.py  detsim_FullDet.py  detsim_FullDet_HCAL.py  detsim_FullDet_TPC.py  detsim_Hcal.py  detsim_Pan_ana.root  detsim_pi.py  digiRec_arbor.py  digiRec_ecal.py  digiRec_full.py  digiRec_hcal.py  digiRec_pandora.py  digiRec_truth.py  digiRec_truth_Scheme1.py  digi_full.py  draw_3Devent.py  edm4hep_read.py  gen_test.root  log.mem.usage  onlyEcal.py  pandora_rec.py  read.py  readDigi.py  rec_full.py  run.mac  run.sh  sim.py  sim_test1.py  simrec_Yudan.py  simrec_template.py  sub_runSimuDigi.sh  (+3 more)
run/Check1D/: detsim_1gam.py  read.py
run/CheckGeo/: CRDGlobalTest_1gamPFA.root  OutTree_gam.root  detsim_1gam.py  detsim_Pan_ana.root  pandora_rec.py  read.py  tut_detsim_pandora.py
run/template/: detsim_FullDet_HCAL_temp.py  detsim_FullDet_TPC_temp.py  detsim_HCAL_nnHgg_temp.py  digiRec_temp.py  (+15 more)
(+93 files in other folders)
